--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,34 @@ ul {
 
 li {
   display: inline-block;
+}
+
+li p, li button {
   margin: 0.2rem;
   padding: 1rem;
+  border: none;
+}
+
+.animal-button {
+  background-color: orangered;
+}
+
+.fact-item {
+  display: inline-block;
+  margin-right: 0;;
   background-color: green;
+}
+
+.remove-fact-button {
+  display: inline-block;
+  margin-left: 0;
+  background-color: red;
+}
+
+.add-fact-button {
+  background-color: hotpink;
+}
+
+.all-fact-item {
+  background-color: palegreen;
 }
